--- a/src/assets/css/Login.module.css
+++ b/src/assets/css/Login.module.css
@@ -1,5 +1,5 @@
 .container{
-    background-color: #F5F6FA;
+    background: #F5F6FA;
     height: 500px;
     display: flex;
     justify-content: center;
