--- a/src/assets/css/Login.module.css
+++ b/src/assets/css/Login.module.css
@@ -8,7 +8,7 @@
 
 .content{
     height: 400px;
-    width: 60%;
+    width: 70%;
     /* background-color: aquamarine; */
     /* margin: auto; */
     display: flex;
@@ -21,6 +21,7 @@
     /* background-color: bisque; */
     display: flex;
     flex-direction: column;
+    width: 35%;
     /* align-items: center; */
     /* justify-content: center; */
 }
@@ -40,10 +41,10 @@ input{
     /* position: absolute; */
 }
 
-img{
-    width: 530px;
+/* img{
+    width: 50%;
     height: 400px;
-}
+} */
 
 .caption{
     font-size: 20px;
