--- a/src/assets/css/PermintaanKolaborasi.module.css
+++ b/src/assets/css/PermintaanKolaborasi.module.css
@@ -11,5 +11,78 @@
     background: #E2EFDB;
     box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header{
+    height: 13%;
+    width: 100%;
+    background-color: black;
+    border-radius: 10px;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-family: Poppins;
+}
+
+input{
+    width: 100%;
+}
+
+textarea{
+    width: 100%;
+    height: 150px;
+}
+
+.content{
+    width: 70%;
+    margin-bottom: 10px;
+}
+
+.content2{
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.content3{
+    width: 30%;
+    margin-bottom: 20px;
+}
+
+.content4{
+    width: 70%;
+    height: 30px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn{
+    width: 20%;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #0078E7;
+    color: #FFFFFF;
+    /* font-weight: bold; */
+}
+
+.item{
+    width: 45%;
+}
+
+.uploadImg{
+    width: 70%;
+    height: 100px;
+    border: 2px dashed;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
