--- a/src/assets/css/ListWebinar.module.css
+++ b/src/assets/css/ListWebinar.module.css
@@ -45,7 +45,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #F5F6FA;
+    background-color: #FF0D0D;
     border-radius: 50px;
 }
 
@@ -113,4 +113,10 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 2rem;
+}
+
+.urutBerdasarkan{
+    margin: auto;
+    margin-top: 40px;
+    width: 17%;
 }
