--- a/src/assets/css/Webinar.module.css
+++ b/src/assets/css/Webinar.module.css
@@ -1,5 +1,5 @@
 .itemWebinar{
-    height: 200px;
+    height: 400px;
     width: 300px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -11,4 +11,13 @@
     width: 80%;
     /* background-color: blue; */
     margin: auto;
+}
+
+img{
+    width: 100%;
+    height: auto;
+}
+
+.itemWebinar:hover{
+    background: rgb(99, 99, 240);
 }
