--- a/src/assets/css/EventSaya.module.css
+++ b/src/assets/css/EventSaya.module.css
@@ -16,3 +16,12 @@
     font-size: 48px;
     font-weight: bold;
 }
+
+.webinarBox{
+    margin-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 2rem;
+}
