--- a/src/assets/css/DetailEvents.module.css
+++ b/src/assets/css/DetailEvents.module.css
@@ -55,6 +55,22 @@
     align-items: center;
 }
 
+.btnSubmit{
+    background: linear-gradient(0deg, rgba(230, 247, 232, 0.2), rgba(230, 247, 232, 0.2)), rgba(148, 214, 117, 0.84);
+    border-radius: 50px;
+    font-size: 16px;
+    width: 75%;
+    height: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.btnSubmit:hover{
+    background: linear-gradient(0deg, rgba(230, 247, 232, 0.2), rgba(230, 247, 232, 0.2)), rgba(193, 231, 176, 0.84);
+    
+}
+
 .btnSubmit p{
     color: #FFFFFF;
 }
@@ -88,6 +104,11 @@
     font-size: 16px;
 }
 
+.itemInfo span{
+    font-weight: bold;
+    font-size: 16px;
+}
+
 .afterDaftar{
     font-weight: normal;
     font-size: 14px;
@@ -95,4 +116,6 @@
 
 .webinarImg img{
     border-radius: 60px;
+    max-height: 600px;
+    /* width: auto; */
 }
