--- a/src/assets/css/Webinar.module.css
+++ b/src/assets/css/Webinar.module.css
@@ -1,10 +1,18 @@
 .itemWebinar{
-    height: 430px;
+    min-height: 450px;
     width: 23%;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
     padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.description{
+    min-height: 80px;
+    /* background: blue; */
 }
 
 .itemWebinarSaya{
@@ -18,7 +26,7 @@
 
 .content{
     width: 80%;
-    height: 380px;
+    min-height: 380px;
     /* background-color: blue; */
     margin: auto;
 }
@@ -50,16 +58,21 @@ img{
 
 img{
     border-radius:40px;
+    min-height: 200px;
+    max-height: 250px;
+    /* height: auto; */
 }
 
 .title{
     font-weight: bold;
     font-size: 20px;
     text-align: center;
-    height: 50px;
+    min-height: 60px;
 }
 
 .startPart{
+    padding-bottom: 30px;
     display: flex;
     justify-content: space-evenly;
 }
+
