--- a/src/assets/css/Home.module.css
+++ b/src/assets/css/Home.module.css
@@ -62,6 +62,10 @@ h2{
     font-weight: bold;
 }
 
+.searchBtn:hover{
+    background-color: #db8184;
+}
+
 .atau{
     font-weight: bold;
     margin-bottom: 30px;
