--- a/src/assets/css/NavbarLogin.module.css
+++ b/src/assets/css/NavbarLogin.module.css
@@ -58,6 +58,12 @@
     justify-content: center;
 }
 
+.search:hover{
+    border: 1px solid #4898e4;
+    color: #fff;
+    background: #4898e4;
+}
+
 button{
     border: none;
 }
